[sync] DCHECK from UTF16ToASCII from TemplateURLService LogDuplicatesHistogram erroneously assumes that all keywords are ASCII. This CL removes that assumption and adds a test for the crash.

R=pkasting@chromium.org

BUG=613082

Review-Url: https://codereview.chromium.org/2016463003
Cr-Commit-Position: refs/heads/master@{#396876}

Former-commit-id: 122369ab8e771215d1afca236a20d16002c5000b