components/search_engines/template_url_service.cc
@@ -131,18 +131,18 @@ bool IsFromSync(const TemplateURL* turl, const SyncDataMap& sync_data) {
 // underscores, which could occur as the result of conflict resolution.
 void LogDuplicatesHistogram(
     const TemplateURLService::TemplateURLVector& template_urls) {
-  std::map<std::string, int> duplicates;
+  std::map<base::string16, int> duplicates;
   for (TemplateURLService::TemplateURLVector::const_iterator it =
       template_urls.begin(); it != template_urls.end(); ++it) {
-    std::string keyword = base::UTF16ToASCII((*it)->keyword());
-    base::TrimString(keyword, "_", &keyword);
+    base::string16 keyword = (*it)->keyword();
+    base::TrimString(keyword, base::ASCIIToUTF16("_"), &keyword);
     duplicates[keyword]++;
   }
 
   // Count the keywords with duplicates.
   int num_dupes = 0;
-  for (std::map<std::string, int>::const_iterator it = duplicates.begin();
-      it != duplicates.end(); ++it) {
+  for (std::map<base::string16, int>::const_iterator it = duplicates.begin();
+       it != duplicates.end(); ++it) {
     if (it->second > 1)
       num_dupes++;
   }
